--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Hello World</h1>
         <p>
-            Welcome to Pekni.com gitdev boom!!!!!
+            Welcome to Pekni.com gitdev boom!!!!! WOW!
         </p>
     </body>
 </html>
